2011-02-13  Robert Larice
  part 2, the actual change

2011-02-13  Robert Larice
  part 1, whitespace and indentation, nothing else

2011-02-13  Robert Larice
  undo the last commit, with the sole purpose to seperate it into two commits

2011-02-13  Holger Vogt
 * spicelib/analysis/acan.c: explicit type cast
 * spicenum.c, mystring.c, xpressn.c: start cleanup, fix bug no. 3175568

2011-02-12  Holger Vogt
 * src/makefile.am: enable tclspice again
 * com_measure2.c fix bug no. 3165634

2011-02-11  Robert Larice
 * src/spicelib/parser/inp2r.c :
    bug fix, when rewriting a resistors tc = number number  ==>  tc=number tc2=number

2011-02-11  Robert Larice
 * src/xspice/cmpp/mod_lex.l ,
 * src/xspice/cmpp/mod_yacc.y ,
 * src/xspice/icm/spice2poly/icm_spice2poly/cfunc.mod ,
 * src/xspice/icm/spice2poly/icm_spice2poly/ifspec.ifs :
    bug fix, when `show' a xspice spice2poly device (acgains)

2011-02-11  Robert Larice
 * src/frontend/plotting/x11.c :
    bug fix a segfault when closing a second x11-window, then resizing the first
    copied a workaround from
	2009-01-10 Holger Vogt
	in windisp.c
    FIXME, x11 structures and currentgraph ...

2011-02-11  Robert Larice
 * src/frontend/parse-bison.c :
    and update the parser output

2011-02-11  Robert Larice
 * src/frontend/parse-bison.y :
    silence a `bcheck' warning `read from uninitialized memory'
      yylval in the bison generated parser is copied,
      even when the value is actually unused

2011-02-11  Robert Larice
 * src/spicelib/devices/vsrc/vsrcask.c :
    add a missing `ask' function for VSRC_TRRANDOM

2011-02-11  Robert Larice
 * src/spicelib/devices/cpl/cplmpar.c ,
 * src/spicelib/devices/isrc/isrcpar.c ,
 * src/spicelib/devices/vsrc/vsrcpar.c :
    fix a bug when `alter' a vector parameter (VSRC PWL for example)

2011-01-25  Robert Larice
 * Modified src/include/cmproto.h ,
 * Modified src/xspice/icm/dlmain.c ,
 * Modified src/xspice/icm/digital/d_source/cfunc.mod ,