@@ -60,7 +60,7 @@ extern int dynmaxline; /* inpcom.c:1529 */
   overwrite any line pointers, or we start a new set after each sig=0 ?
   Anyway, we neutralize all & and .param lines  (category[] array!)
   and we substitute all {} &() and &id placeholders by dummy numbers.
-  The placeholders are long long integers 100000000000000+n (17 digits, n small).
+  The placeholders are long long integers 10000000000000000+n (17 digits, n small).
 
 */
 /**********  string handling ***********/
