@@ -1,4 +1,10 @@
 2011-02-13  Robert Larice
+ * src/frontend/numparam/spicenum.c ,
+ * src/frontend/numparam/xpressn.c :
+    reinstate a missing if(numerical), which got lost
+      and fix a few comments
+
+2011-02-13  Robert Larice
   part 2, the actual change
 
 2011-02-13  Robert Larice
